--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,14 @@ on:
     branches: [ dev ]
 
 jobs:
-
   format:
     runs-on: ubuntu-20.04
     timeout-minutes: 5
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - run: cd App & flutter format -l 120 --set-exit-if-changed .
-  
+
   analyze:
     runs-on: ubuntu-20.04
     timeout-minutes: 5
@@ -23,9 +21,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - name: install dependencies
-        run: flutter pub get
+        run: cd App & flutter pub get
       - run: cd App & flutter analyze --fatal-infos --fatal-warnings .
-  
+
   widget_test:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
