--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,12 @@
 name: Continuous Integration
 
 on: 
-  pull_request_review: 
-    types: [ submitted ]
+  pull_request: 
     branches: [ dev ]
 
 jobs: 
   format: 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v2
@@ -15,7 +14,7 @@ jobs:
       - run: cd App & flutter format -l 120 --set-exit-if-changed .
 
   analyze: 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 5
     steps: 
       - uses: actions/checkout@v2
@@ -25,7 +24,7 @@ jobs:
       - run: cd App & flutter analyze --fatal-infos --fatal-warnings .
 
   widget_test: 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps: 
       - uses: actions/checkout@v2
@@ -37,10 +36,10 @@ jobs:
       - name: run test
         run: cd App & flutter test --coverage --coverage-path=./coverage/lcov.info
   
-  - name: Actions Status Discord
-    uses: sarisia/actions-status-discord@v1.8.6
-    if: github.event.review.state == 'approved'
-    with: 
-      webhook: ${{ secrets.DISCORD_WEBHOOK }}
-      status: ${{ job.status }}
-      title: ${{ github.workflow }}
+      - name: Actions Status Discord
+        uses: sarisia/actions-status-discord@v1.8.6
+        if: github.event.review.state == 'approved'
+        with: 
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          status: ${{ job.status }}
+          title: ${{ github.workflow }}
