hotfix: ci command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
-      - run: cd App & flutter format -l 120 --set-exit-if-changed .
+      - run: cd App && flutter format -l 120 --set-exit-if-changed .
 
   analyze: 
     runs-on: ubuntu-latest
@@ -21,8 +21,8 @@ jobs:
       - uses: subosito/flutter-action@v1
       - name: install dependencies
         continue-on-error: true
-        run: cd App & flutter pub get
-      - run: cd App & flutter analyze --fatal-infos --fatal-warnings .
+        run: cd App && flutter pub get
+      - run: cd App && flutter analyze --fatal-infos --fatal-warnings .
 
   widget_test: 
     runs-on: ubuntu-latest
@@ -32,13 +32,13 @@ jobs:
       - uses: subosito/flutter-action@v1
       - name: doctor
         continue-on-error: true
-        run: cd App & flutter doctor -v
+        run: cd App && flutter doctor -v
       - name: install dependencies
         continue-on-error: true
-        run: cd App & flutter pub get
+        run: cd App && flutter pub get
       - name: run test
         continue-on-error: true
-        run: cd App & flutter test --coverage --coverage-path=./coverage/lcov.info
+        run: cd App && flutter test --coverage --coverage-path=./coverage/lcov.info
   
       - name: Actions Status Discord
         uses: sarisia/actions-status-discord@v1.8.6
