--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   provider: ^6.0.3
   tflite_flutter: ^0.9.0
   url_launcher: ^6.1.5
+  google_sign_in: ^5.4.0
 
 dev_dependencies:
   flutter_test:
