--- a/App/android/app/src/main/AndroidManifest.xml
+++ b/App/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.snctathome.solimage">
     <application
-        android:label="solimage"
+        android:label="Solimage"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
