update: SDK cache

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,13 @@ jobs:
     timeout-minutes: 5
     steps: 
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
+        with: 
+          flutter-version: '2.5.0'
+          channel: 'stable'
+          cache: true
+          cache-key: flutter # optional, change this to force refresh cache
+          cache-path: ${{ runner.tool_cache }}/flutter
       - name: install dependencies
         continue-on-error: true
         run: cd App && flutter pub get
@@ -23,7 +29,13 @@ jobs:
     timeout-minutes: 10
     steps: 
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
+        with: 
+          flutter-version: '2.5.0'
+          channel: 'stable'
+          cache: true
+          cache-key: flutter # optional, change this to force refresh cache
+          cache-path: ${{ runner.tool_cache }}/flutter
       - name: doctor
         continue-on-error: true
         run: cd App && flutter doctor -v
