--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   tflite_flutter: ^0.9.0
   url_launcher: ^6.1.5
   google_sign_in: ^5.4.0
+  tflite_flutter_helper: ^0.2.1
+  image_picker: ^0.8.5+3
+  image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
