--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
       - name: install dependencies
         continue-on-error: true
         run: cd App && flutter pub get
+      - name: generate mock files
+        continue-on-error: true
+        run: flutter pub run build_runner build
       - name: run test
         continue-on-error: true
         run: cd App && flutter test --coverage --coverage-path=./coverage/lcov.info
