--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   camera: ^0.10.0
   cloud_firestore: ^3.4.3
-  firebase_app_installations: ^0.1.1+3
   firebase_auth: ^3.6.2
   firebase_core: ^1.20.0
   firebase_crashlytics: ^2.8.6
@@ -45,17 +44,13 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   flutter_native_splash: ^2.2.7
   go_router: ^4.2.7
-  google_fonts: ^3.0.1
-  path: ^1.8.1
-  path_provider: ^2.0.11
   permission_handler: ^10.0.0
-  provider: ^6.0.3
   tflite_flutter: ^0.9.0
   url_launcher: ^6.1.5
   google_sign_in: ^5.4.1
   tflite_flutter_helper: ^0.2.1
-  image_picker: ^0.8.5+3
   image: ^3.2.0
+  flutter_riverpod: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -113,3 +108,18 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Noto Sans JP
+      fonts:
+        - asset: assets/fonts/NotoSansJP-Thin.otf
+          weight: 100
+        - asset: assets/fonts/NotoSansJP-Light.otf
+          weight: 300
+        - asset: assets/fonts/NotoSansJP-Regular.otf
+          weight: 400
+        - asset: assets/fonts/NotoSansJP-Medium.otf
+          weight: 500
+        - asset: assets/fonts/NotoSansJP-Bold.otf
+          weight: 700
+        - asset: assets/fonts/NotoSansJP-Black.otf
+          weight: 900
