--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -46,7 +46,6 @@ dependencies:
   go_router: ^4.2.7
   permission_handler: ^10.0.0
   tflite_flutter: ^0.9.0
-  url_launcher: ^6.1.5
   google_sign_in: ^5.4.1
   tflite_flutter_helper: ^0.2.1
   image: ^3.2.0
@@ -54,8 +53,6 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  integration_test:
     sdk: flutter
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -65,6 +62,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mockito: ^5.3.0
   build_runner: ^2.2.0
+  dependency_validator: any
+  camera_platform_interface: ^2.2.0
 
 
 # For information on the generic Dart part of this file, see the
