--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   tflite_flutter_helper: ^0.2.1
   image: ^3.2.0
   flutter_riverpod: ^1.0.4
+  fl_chart: ^0.55.1
 
 dev_dependencies:
   flutter_test:
