add: shared preferences

--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_riverpod: ^1.0.4
   fl_chart: ^0.55.1
   flutter_animated_dialog: ^2.0.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
