--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_animated_dialog: ^2.0.1
   shared_preferences: ^2.0.15
   flutter_simple_treeview: ^3.0.1
+  google_ml_kit: ^0.12.0
 
 dev_dependencies:
   flutter_test:
