--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_simple_treeview: ^3.0.1
   google_ml_kit: ^0.12.0
+  flip_card: ^0.6.0
 
 dev_dependencies:
   flutter_test:
