--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_simple_treeview: ^3.0.1
   google_ml_kit: ^0.12.0
   flip_card: ^0.6.0
+  animations: ^2.0.4
 
 dev_dependencies:
   flutter_test:
