add: image caching

--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_simple_treeview: ^3.0.1
   animations: ^2.0.4
   firebase_performance: ^0.8.3
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
