--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -49,13 +49,13 @@ dependencies:
   tflite_flutter_helper: ^0.2.1
   image: ^3.2.0
   flutter_riverpod: ^1.0.4
-  fl_chart: ^0.55.1
   shared_preferences: ^2.0.15
   flutter_simple_treeview: ^3.0.1
   animations: ^2.0.4
   firebase_performance: ^0.8.3
   cached_network_image: ^3.2.2
   image_picker: ^0.8.5+3
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
