--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   cached_network_image: ^3.2.2
   image_picker: ^0.8.5+3
   charts_flutter: ^0.12.0
+  package_info_plus: ^1.4.2
 
 dev_dependencies:
   flutter_test:
