--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_picker: ^0.8.5+3
   charts_flutter: ^0.12.0
   package_info_plus: ^1.4.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
