--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   charts_flutter: ^0.12.0
   package_info_plus: ^1.4.2
   http: ^0.13.5
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
