--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   firebase_ml_model_downloader: ^0.1.1+8
   firebase_storage: ^10.3.9
   flutter_launcher_icons: ^0.10.0
-  flutter_native_splash: ^2.2.9
-  go_router: ^5.0.1
-  permission_handler: ^10.0.1
+  flutter_native_splash: ^2.2.10+1
+  go_router: ^5.0.2
+  permission_handler: ^10.0.2
   tflite_flutter: ^0.9.0
   google_sign_in: ^5.4.2
   tflite_flutter_helper: ^0.2.1
