update: allow vibration

--- a/App/android/app/src/main/AndroidManifest.xml
+++ b/App/android/app/src/main/AndroidManifest.xml
@@ -39,4 +39,6 @@
         android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission
         android:name="android.permission.CAMERA"/>
+    <uses-permission 
+        android:name="android.permission.VIBRATE" /> 
 </manifest>
