--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -34,15 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   camera: ^0.10.0+3
-  cloud_firestore: ^3.5.0
-  firebase_auth: ^3.11.1
+  cloud_firestore: ^3.5.1
+  firebase_auth: ^3.11.2
   firebase_core: ^1.24.0
-  firebase_crashlytics: ^2.8.12
+  firebase_crashlytics: ^2.9.0
   firebase_ml_model_downloader: ^0.1.1+9
-  firebase_storage: ^10.3.10
+  firebase_storage: ^10.3.11
   flutter_launcher_icons: ^0.10.0
-  flutter_native_splash: ^2.2.10+1
-  go_router: ^5.0.5
+  flutter_native_splash: ^2.2.11
+  go_router: ^5.1.0
   permission_handler: ^10.1.0
   tflite_flutter: ^0.9.0
   google_sign_in: ^5.4.2
@@ -51,10 +51,10 @@ dependencies:
   flutter_riverpod: ^2.0.2
   shared_preferences: ^2.0.15
   flutter_simple_treeview: ^3.0.1
-  animations: ^2.0.6
-  firebase_performance: ^0.8.3+2
+  animations: ^2.0.7
+  firebase_performance: ^0.8.3+3
   cached_network_image: ^3.2.2
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.6
   http: ^0.13.5
   collection: ^1.16.0
   fl_chart: ^0.55.2
