--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/solimage.png
     - assets/model.tflite
     - assets/labels.txt
 
