change: splash color when light mode

--- a/App/flutter_native_splash.yaml
+++ b/App/flutter_native_splash.yaml
@@ -10,7 +10,7 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  color: "#42a5f5"
+  color: "#f5f5f5"
   #background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -56,7 +56,7 @@ flutter_native_splash:
     #color: "#42a5f5"
 
     # App icon background color.
-    icon_background_color: "#42a5f5"
+    icon_background_color: "#f5f5f5"
 
     # The branding property allows you to specify an image used as branding in the splash screen.
     #branding: assets/dart.png
