add: introduction screen

--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   vibration: ^1.7.6
   package_info_plus: ^1.4.2
   fluttertoast: ^8.1.1
+  introduction_screen: ^3.0.2
 
 dev_dependencies:
   flutter_test:
